@@ -2,7 +2,7 @@
 
 JDK : openjdk17 
 
-RDMS : MySQL
+RDMS : MySQL (8.0 CE)
 
 Spring Boot : springframework.boot (version. 2.6.7) 
 
@@ -11,3 +11,7 @@ SQL Mapper : MyBatis
 Build Tool : Gradle 
 
 Test : JUnit5, AssertJ
+
+---
+1. 빌드시 Java HotSpot(TM) 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
+-> 해당 경고는 JDK13에서 -Xverify:none and -noverify 옵션이 제거되면서 발생하는 오류.
